# dev-orchestrator-mcp

./: .gitignore  CHANGELOG.md  CLAUDE_CODE_PROMPT.md  CONTRIBUTING.md  GITHUB_REPOS_NEEDED.md  README.md  launch.sh  mcp-config.example.json  plugin-catalog.json  pyproject.toml
.claude/: settings.json  settings.local.json
.github/workflows/: ci.yml
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/public/: plugin-catalog.json
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src/components/: GuidedTour.tsx  NLPSettings.tsx  PluginCreator.tsx  PluginHealthWidget.tsx  PluginMarketplace.tsx  PluginsPanel.tsx  Sidebar.tsx
dashboard/src/tours/: index.ts
dashboard/src/views/: ExtensionsView.tsx
docs/: EXAMPLE_PATTERNFLY_PLUGIN.md  PLUGIN_CONTRIBUTING.md  PLUGIN_CREATOR_TEST_RESULTS.md  PLUGIN_SECURITY.md  plugin-template.json
src/: __init__.py  config.py  detector.py  executor.py  menubar_app.py  nlp_service.py  notifications.py  server.py  state.py  websocket_server.py  workspace_manager.py
src/database/: __init__.py  engine.py  migration_utils.py  models.py
src/database/repositories/: __init__.py  base.py  command_repo.py  plugin_repo.py  project_repo.py  saved_command_repo.py
src/nlp/: __init__.py  anthropic_provider.py  base.py  command_templates.py  gemini_provider.py  manager.py  ollama_provider.py  openai_provider.py
src/plugins/: __init__.py  detector.py  health_monitor.py  installer.py  manager.py  models.py
src/templates/: __init__.py  extension_creator.py  plugin_creator.py
