[project]
name = "dev-orchestrator-mcp"
version = "0.1.0"
description = "MCP server for Mac dev environment orchestration with guardrails"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "rumps>=0.4.0",
    "psutil>=5.9.0",
    "toml>=0.10.2",
    "watchdog>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
dev-orchestrator = "src.server:main"
dev-menubar = "src.menubar_app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
